Este commit aplicado ajusta valores e informacoes da tabela
