# Projetos/UsingDynamoWithAPI/routes/routes.js
@@ -5,20 +5,22 @@ module.exports = function (app) {
     app.get('/urlantiga/:unid/:cli', async function (req, res) {
         console.log(`dados entrando no routes: ${JSON.stringify(req.params)}`);
         const serviceExample = await app.services.servicesSample.callServicesGetTypeUrlAntigaItems(req.params);
-        res.send(serviceExample)
+        res.send(JSON.parse(JSON.stringify(serviceExample)))
     })
 
-    app.get('/urlnovacomtodoitens/:unidade/:cli', async function (req, res) {
+    app.get('/urlnovacomtodoitens/:unid/:cli', async function (req, res) {
+        console.log(`dados entrando no routes: ${JSON.stringify(req.params)}`);
+        const serviceExample = await app.services.servicesSample.callServicesGetTypeComTodoItens(req.params);
+        res.send(JSON.parse(JSON.stringify(serviceExample)))
+
+    })
+
+    app.get('/urlnovacomtodoitemespecifico/:unid/:ami/:cli/', async function (req, res) {
         //const serviceExample = await app.services.servicesSample;
         //res.send(serviceExample)
     })
 
-    app.get('/urlnovacomtodoitemespecifico/:unidade/:ami/:cli/', async function (req, res) {
-        //const serviceExample = await app.services.servicesSample;
-        //res.send(serviceExample)
-    })
-
-    app.delete('/urldeletaitem/:unidade/:ami', async function (req, res) {
+    app.delete('/urldeletaitem/:unid/:ami', async function (req, res) {
         //const serviceExample = await app.services.servicesSample;
         //res.send(serviceExample)
     })
